Cascading Change Log

3.0.0 [unreleased]

  Removed the deprecated c.t.h.TemplateTap, c.t.l.TemplateTap, and c.t.BaseTemplateTap classes and associated tests.

  Fixed issue where a start/stop race condition in c.c.Cascade could allow a downstream c.f.Flow to start when a
  predecessor fails.

  Update janino to 2.7.6.

  Added support for Apache Tez. See README for details.

  Added c.f.FlowRuntimeProps to allow for setting cluster side specific properties per c.f.Flow instance in a platform
  independent manner.

  Changed planner to disallow duplicate c.p.Pipe head and tail names.

  Updated c.f.p.FlowPlanner to use generalized isomorphic sub-graph matching rules to apply platform specific plan
  assertions, transforms, and step partitioning.

2.6.1

  Updated c.p.h.Hadoop2MR1Platform to enforce settings to make local mode behave the same across distributions.

  Fixed issues where a c.f.Flow instance could be marked stopped while transitioning to a started state when used in
  a c.c.Cascade.

  Fixed issue where c.t.h.i.TapOutputCollector did not honor the current task o.a.h.m.Reporter instance on the
  cluster side. This should improve the accuracy of Hadoop counters wrapped by c.t.h.PartitionTap.

  Updated c.t.Tuple#isUnmodifiable to be transient to prevent the value from being serialized and restored resulting in
  an unmodifiable Tuple from a data source.

  Updated c.s.h.HadoopStepStats to reduce memory pressure when fetching TaskReports and TaskCompletionEvents from
  Hadoop 2.x.

  Updated c.p.h.HadoopPlatform to set 'mapreduce.jobtracker.staging.root.dir' to a fully qualified path for non-cluster
  tests.

  Fixed issue where c.u.Version was leaking file descriptors.

  Fixed issue where c.t.h.Hfs would not properly ignore 'hidden' files starting with '.' or '_' when listing children
  in a directory.

2.6.0

  Updated c.p.a.AggregateBy and c.p.a.Unique to count cache flushes, hits, and misses. Previously only AggregateBy
  tracked cache flushes.
